--- a/enadzornik-ui/login.html
+++ b/enadzornik-ui/login.html
@@ -18,7 +18,7 @@
         }
 
         button {
-            background: #3498db;
+            background: #124D4D;
             color: white;
             border: none;
             cursor: pointer;
