--- a/enadzornik-ui/register.html
+++ b/enadzornik-ui/register.html
@@ -18,7 +18,7 @@
         }
 
         button {
-            background: #27ae60;
+            background: #124D4D;
             color: white;
             border: none;
             cursor: pointer;
